# op

./: .gitignore  README.md  build.bat  cfd.py  d.bat  e1.bat  e2.bat  e3.bat  e4.bat  e5.bat  em.py  fx.py  make.bat  mf.py  op.bat  op.py  op.spec  pm.py  pt.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  swc.bat  swv.bat
op/: __init__.py  c.py  cfd.py  e.py  em.py  h.py  mg.py  op.py  pm.py  sw.py
tests/: test_cfd.py  test_e.py  test_em.py  test_h.py
